force-app/main/default/objects/class_Student_Exam__c/class_Student_Exam__c.object-meta.xml
<CustomObject>
    <label>class Student Exam</label>
    <nameField>
        <label>class Student Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>class Student Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>