force-app/main/default/objects/class_Student_Exam__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>class Student Exams</relationshipLabel>
    <relationshipName>class_Student_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>