force-app/main/default/objects/class_Student_Exam__c/fields/Mark_in_social__c.field-meta.xml
<CustomField>
    <fullName>Mark_in_social__c</fullName>
    <label>Mark in social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>