force-app/main/default/objects/class_Student_Exam__c/fields/Pass_in_Social__c.field-meta.xml
<CustomField>
    <fullName>Pass_in_Social__c</fullName>
    <label>Pass in Social</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>