force-app/main/default/objects/class_Student_Exam__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>12</length>
    <type>Text</type>
</CustomField>