force-app/main/default/objects/class_Student_Exam__c/fields/Student1_Class_enrollment__c.field-meta.xml
<CustomField>
    <fullName>Student1_Class_enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student1-Class enrollment</label>
    <referenceTo>Student1_Class_enrollment__c</referenceTo>
    <relationshipLabel>class Student Exams</relationshipLabel>
    <relationshipName>class_Student_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>